<resources>
    <string name="app_name">Magang 2022</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="capt_masuk">Aku senang melihatmu kembali, kamu bisa melanjutkan login untuk mengatur kecukupan gizimu</string>
    <string name="username_e_mail_nomor_hp">Username/E-mail/Nomor HP</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="capt_buat_akun">Buat akun sehingga kamu bisa mengatur kecukupan gizimu</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email_nomor_hp">Email/Nomor HP</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="capt_onboarding1">Monitor kebutuhan gizi harianmu untuk membuat tubuh sehat selalu</string>
    <string name="judul_onboarding1">Penuhi Kebutuhan Gizi</string>
    <string name="email">Email</string>
    <string name="judul_biodata">Isi Data Dirimu</string>
    <string name="capt_biodata">Sebelum mulai, yuk Lengkapi data dirimu terlebih dahulu</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="usia">Usia</string>
    <string name="tinggi_badan">Tinggi Badan (cm)</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="selesai">Selesai</string>
    <string name="judul_profil">Profil Anda</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profil">Profil</string>
    <string name="timeline">Timeline</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capt_onboarding2">Bergabung dengan komunitas untuk menjalani kehidupan sehat bersama</string>
    <string name="title_onboarding2">Komunitas Sehat</string>
    <string name="mulai"><![CDATA[Mulai >]]></string>
    <string name="next"><![CDATA[>>]]></string>
</resources>